feedback-fix: align buttons

--- a/app/assets/stylesheets/base/search.scss
+++ b/app/assets/stylesheets/base/search.scss
@@ -354,6 +354,15 @@
   }
 }
 
+.pageHome {
+   
+  .addSpendingIntentionFieldButton {
+    .icon {
+      width: 55px;
+    }
+  }
+}
+
 .addIntentionFieldFix {
   font-family: "PNReg" !important;
   color: #797C7F;
